--- a/index.html
+++ b/index.html
@@ -124,24 +124,32 @@
        <tr>
         <td align=center width=100px>
         <center>
-        <span style="font-size:20px"><a href="https://nileshkulkarni.github.io/">Nilesh Kulkarni<sup>1</sup></a></span>
+        <span style="font-size:20px"><a href="https://scholar.google.ch/citations?user=tM9xKA8AAAAJ&hl=en/">Muzammal Naseer<sup>1</sup></a></span>
         </center>
         </td>
         <td align=center width=100px>
         <center>
-          <span style="font-size:20px"><a href="https://imisra.github.io/">Ishan Misra<sup>2</sup></a></span>
-        </center>
-        </td>
-
-        <td align=center width=100px>
-        <center>
-        <span style="font-size:20px"><a href="https://shubhtuls.github.io/">Shubham Tulsiani<sup>2</sup></a></span>
+          <span style="font-size:20px"><a href="https://scholar.google.com/citations?user=M59O9lkAAAAJ&hl=en/">Salman Khan<sup>2</sup> <sup>1</sup></a></span>
         </center>
         </td>
 
         <td align=center width=100px>
         <center>
-        <span style="font-size:20px"><a href="http://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta<sup>1</sup></a></span>
+        <span style="font-size:20px"><a href="https://scholar.google.com/citations?user=ZgERfFwAAAAJ&hl=en/">Haris Khan<sup>2</sup></a></span>
+        </center>
+        </td>
+
+        <td align=center width=100px>
+        <center>
+        <span style="font-size:20px"><a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en">Fahad Shahbaz Khan
+<sup>2</sup></a></span>
+        </center>
+        </td>
+           
+         <td align=center width=100px>
+        <center>
+        <span style="font-size:20px"><a href="https://scholar.google.com/citations?user=VpB8NZ8AAAAJ&hl=en">Fatih Porikli
+<sup>1</sup></a></span>
         </center>
         </td>
       
@@ -153,12 +161,12 @@
        <tr>
         <td align=center width=100px>
         <center>
-          <span style="font-size:20px"><sup>1</sup>Carnegie Mellon University</span>
+          <span style="font-size:20px"><sup>1</sup>Australian National University</span>
         </center>
         </td>
          <td align=center width=100px>
         <center>
-          <span style="font-size:20px"><sup>2</sup>Facebook AI Research</span>
+          <span style="font-size:20px"><sup>2</sup>Inception Institute of Artificial Intelligence</span>
         </center>
         </td>
      </tr>
@@ -179,7 +187,7 @@
                 <tr>
                     <td width=00px>
                       <center>
-                          <a href="./resources/images/teaser.png"><img src = "./resources/images/teaser.png" height="600px"></img></href></a><br>
+                          <a href="./resources/images/teaser.png"><img src = "./resources/images/Teaser.png" height="600px"></img></href></a><br>
                     </center>
                     </td>
                 </tr>
