--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <html>
   <head>
         <title>CDP</title>
-        <meta property="og:title" content="3D RelNet" />
+        <meta property="og:title" content="CDP" />
   </head>
 
   <body>
@@ -122,7 +122,7 @@
     <br><br>
       <table align=center width=900px>
        <tr>
-        <td align=center width=300px>
+        <td align=center width=100px>
         <center>
         <span style="font-size:20px"><a href="https://scholar.google.ch/citations?user=tM9xKA8AAAAJ&hl=en/">Muzammal Naseer<sup>1</sup></a></span>
         </center>
@@ -183,7 +183,7 @@
   </table>
 
             <br>
-            <table align=center width=900px>
+            <table align=center width=100px>
                 <tr>
                     <td width=00px>
                       <center>
