--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
                     <!--<td width=300px align=left>-->
                     <!-- <a href="http://arxiv.org/pdf/1603.08511.pdf"> -->
                   <!-- <td><a href="#"><img class="layered-paper-big" style="height:175px" src="./resources/images/paper.png"/></a></td> -->
-                  <td><a href="http://www.cs.cmu.edu/~nileshk/papers/3drelnet.pdf"><img style="height:180px" src="./resources/images/paper.png"/></a></td>
-                  <td><span style="font-size:14pt">Kulkarni, Misra, Tulsiani, Gupta.<br><br>
-                          3D-RelNet:  Joint Object and Relational Network for 3D Prediction.<br><br>
+                  <td><a href="https://arxiv.org/pdf/1905.11736.pdf"><img style="height:180px" src="./resources/images/paper.png"/></a></td>
+                  <td><span style="font-size:14pt">Naseer, Salmna, Haris, Fahd, fatih.<br><br>
+                          Cross-Domain Transferability of Adversarial Perturbations.<br><br>
                  <br>
                   <!-- [hosted on <a href="#">arXiv</a>]</a> -->
                     </td>
