--- a/index.html
+++ b/index.html
@@ -137,7 +137,13 @@
         <center>
         <span style="font-size:20px"><a href="https://scholar.google.com/citations?user=ZgERfFwAAAAJ&hl=en/">Haris Khan<sup>2</sup></a></span>
         </center>
-        </td>
+	       </td>
+      
+     </tr>
+    </table>
+	  
+      <table align=center width=900px>
+       <tr>
 
         <td align=center width=400px>
         <center>
