--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <tr>
             <td width=400px>
                 <center>
-                    <a href="./resources/images/teaser.png"><img src = "./resources/images/Teaser.png" height="400px"></img></href></a><br>
+                    <a href="./resources/images/teaser.png"><img src = "./resources/images/Teaser.jpg" height="400px"></img></href></a><br>
                 </center>
             </td>
             </tr>
