--- a/index.html
+++ b/index.html
@@ -286,7 +286,15 @@
                 </left>
                 </td>
         </table>
-
+<mrow>
+   <mo> ( </mo>
+   <mtable>
+      <mtr> <mn>1</mn> <mn>0</mn> <mn>0</mn> </mtr>
+      <mtr> <mn>0</mn> <mn>1</mn> <mn>0</mn> </mtr>
+      <mtr> <mn>0</mn> <mn>0</mn> <mn>1</mn> </mtr>
+   </mtable>
+   <mo> ) </mo>
+</mrow>
         <br><br>
 </body>
 </html>
