--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <script src="http://www.google.com/jsapi" type="text/javascript"></script>
 <script type="text/javascript">google.load("jquery", "1.3.2");</script>
-
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+</script>
+<script type="text/javascript" async
+  src="https://example.com/mathjax/MathJax.js?config=TeX-AMS_CHTML">
+</script>
 <style type="text/css">
     body {
         font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
@@ -286,15 +291,7 @@
                 </left>
                 </td>
         </table>
-<mrow>
-   <mo> ( </mo>
-   <mtable>
-      <mtr> <mn>1</mn> <mn>0</mn> <mn>0</mn> </mtr>
-      <mtr> <mn>0</mn> <mn>1</mn> <mn>0</mn> </mtr>
-      <mtr> <mn>0</mn> <mn>0</mn> <mn>1</mn> </mtr>
-   </mtable>
-   <mo> ) </mo>
-</mrow>
-        <br><br>
+When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are
+$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
 </body>
 </html>
