--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <script src="http://www.google.com/jsapi" type="text/javascript"></script>
 <script type="text/javascript">google.load("jquery", "1.3.2");</script>
-<script type="text/x-mathjax-config">
-  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
-</script>
 <script type="text/javascript" async
-  src="https://example.com/mathjax/MathJax.js?config=TeX-AMS_CHTML">
-</script>
+  src="https://example.com/mathjax/MathJax.js?config=AM_CHTML"></script>
 <style type="text/css">
     body {
         font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
