--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </td>
         <td align=center width=100px>
             <center>
-                <span style="font-size:20px"><a href="https://scholar.google.com/citations?user=M59O9lkAAAAJ&hl=en/">Salman Khan<sup>2,1</sup></a></span>
+                <span style="font-size:20px" style="color:red"><a href="https://scholar.google.com/citations?user=M59O9lkAAAAJ&hl=en/">Salman Khan<sup>2,1</sup></a></span>
             </center>
         </td>
         <td align=center width=100px>
