--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <script src="http://www.google.com/jsapi" type="text/javascript"></script>
 <script type="text/javascript">google.load("jquery", "1.3.2");</script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <script type="text/javascript" async
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML">
 </script>
@@ -7,7 +8,6 @@
     body {
         font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
         font-weight:300;
-        font-size:18px;
         margin-left: auto;
         margin-right: auto;
         width: 1100px;
@@ -121,7 +121,7 @@
         </td>
         <td align=center width=100px>
             <center>
-                <span style="font-size:20px" style="color:red"><a href="https://scholar.google.com/citations?user=M59O9lkAAAAJ&hl=en/">Salman Khan<sup>2,1</sup></a></span>
+                <span style="font-size:20px;color:red"><a href="https://scholar.google.com/citations?user=M59O9lkAAAAJ&hl=en/">Salman Khan<sup>2,1</sup></a></span>
             </center>
         </td>
         <td align=center width=100px>
