--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
         <title>Cross Domain Perturbations</title>
         <meta property="og:title" content="Cross Domain Perturbations" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+<script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
 	</head>
 <script src="http://www.google.com/jsapi" type="text/javascript"></script>
 <script type="text/javascript"> google.load("jquery", "1.3.2");</script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML">
-</script>
+
+	</script>
 <style>
     body {
         font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
@@ -285,6 +287,7 @@
                 </left>
                 </td>
         </table>
+				$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
 \documentclass{article}
 \usepackage{amsmath}
 \title{\LaTeX}
