--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <!-- Open Graph -->
 <meta property="og:locale" content="en_US"> 
 <meta property="og:type" content="article">
-<meta property="og:title" content="salman-h-khan.github.io">
-<meta property="og:description" content="Salman Khan's website">
-<meta property="og:url" content="https://salman-h-khan.github.io/">
-<meta property="og:site_name" content="salman-h-khan.github.io">
+<meta property="og:title" content="muzammal-naseer.github.io">
+<meta property="og:description" content="Muzammal Naseer's website">
+<meta property="og:url" content="https://muzammal-naseer.github.io/">
+<meta property="og:site_name" content="muzammal-naseer.github.io">
 
 
 
 
 
-<link rel="canonical" href="https://salman-h-khan.github.io/">
-<link href="https://salman-h-khan.github.io/feed.xml" type="application/atom+xml" rel="alternate" title="salman-h-khan.github.io Feed">
+<link rel="canonical" href="https://muzammal-naseer.github.io/">
+<link href="https://muzammal-naseer.github.io/feed.xml" type="application/atom+xml" rel="alternate" title="muzammal-naseer.github.io Feed">
 
 
 <!-- https://t.co/dKP3o1e -->
